@@ -91,6 +91,7 @@ _tny_folder_store_query_passes (TnyFolderStoreQuery *query, CamelFolderInfo *fin
 
 	if (query && (tny_list_get_length (tny_folder_store_query_get_items (query)) > 0))
 	{
+		/* TNY TODO: Make this cope with AND constructs */
 		TnyList *items = tny_folder_store_query_get_items (query);
 		TnyIterator *iterator;
 		iterator = tny_list_create_iterator (items);
@@ -99,30 +100,63 @@ _tny_folder_store_query_passes (TnyFolderStoreQuery *query, CamelFolderInfo *fin
 		{
 			TnyFolderStoreQueryItem *item = (TnyFolderStoreQueryItem*) tny_iterator_get_current (iterator);
 			TnyFolderStoreQueryOption options = tny_folder_store_query_item_get_options (item);
-			regex_t *regex = tny_folder_store_query_item_get_regex (item);
 
 			if ((options & TNY_FOLDER_STORE_QUERY_OPTION_SUBSCRIBED) &&
-			    finfo->flags & CAMEL_FOLDER_SUBSCRIBED)
-				retval = TRUE;
+				finfo->flags & CAMEL_FOLDER_SUBSCRIBED)
+					retval = TRUE;
 
 			if ((options & TNY_FOLDER_STORE_QUERY_OPTION_UNSUBSCRIBED) &&
-			    !(finfo->flags & CAMEL_FOLDER_SUBSCRIBED))
-				retval = TRUE;
+				!(finfo->flags & CAMEL_FOLDER_SUBSCRIBED))
+					retval = TRUE;
 
-			if (regex && options & TNY_FOLDER_STORE_QUERY_OPTION_MATCH_ON_NAME)
-			    if (regexec (regex, finfo->name, 0, NULL, 0) == 0)
-				retval = TRUE;
+			if (options & TNY_FOLDER_STORE_QUERY_OPTION_PATTERN_IS_REGEX)
+			{
+				regex_t *regex = (regex_t *) tny_folder_store_query_item_get_regex (item);
 
-			if (regex && options & TNY_FOLDER_STORE_QUERY_OPTION_MATCH_ON_ID)
-			    if (regexec (regex, finfo->full_name, 0, NULL, 0) == 0)
-				retval = TRUE;
+				if (regex && (options & TNY_FOLDER_STORE_QUERY_OPTION_MATCH_ON_NAME)) {
+					if (regexec (regex, finfo->name, 0, NULL, 0) == 0)
+						retval = TRUE;
+				}
 
-			g_object_unref (G_OBJECT (item));
+				if (regex && (options & TNY_FOLDER_STORE_QUERY_OPTION_MATCH_ON_ID)) {
+					if (regexec (regex, finfo->full_name, 0, NULL, 0) == 0)
+						retval = TRUE;
+				}
+
+			} else {
+				const gchar *pattern = tny_folder_store_query_item_get_pattern (item);
+
+				if (pattern && (options & TNY_FOLDER_STORE_QUERY_OPTION_MATCH_ON_NAME)) 
+				{
+					if (options & TNY_FOLDER_STORE_QUERY_OPTION_PATTERN_IS_CASE_INSENSITIVE)
+					{
+						if (g_strcasecmp (finfo->name, pattern) == 0)
+							retval = TRUE;
+					} else {
+						if (strcmp (finfo->name, pattern) == 0)
+							retval = TRUE;
+					}
+				}
+
+				if (pattern && (options & TNY_FOLDER_STORE_QUERY_OPTION_MATCH_ON_ID)) 
+				{
+					if (options & TNY_FOLDER_STORE_QUERY_OPTION_PATTERN_IS_CASE_INSENSITIVE)
+					{
+						if (g_strcasecmp (finfo->full_name, pattern) == 0)
+							retval = TRUE;
+					} else {
+						if (strcmp (finfo->full_name, pattern) == 0)
+							retval = TRUE;
+					}
+				}
+			}
+
+			g_object_unref (item);
 			tny_iterator_next (iterator);
 		}
 		 
-		g_object_unref (G_OBJECT (iterator));    
-		g_object_unref (G_OBJECT (items));
+		g_object_unref (iterator);
+		g_object_unref (items);
 	} else
 		retval = TRUE;
 
